upated views margins to prevent overlaps

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,6 +19,7 @@
   justify-content:space-around;
   vertical-align: middle;
   color: black;
+  width: 65px;
 }
 .footer-element a {
   color: black;
