--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -11,7 +11,7 @@ legend ~ div.form-check:first-of-type {
 
 .search-form-control {
   position: relative;
-  margin-top: 40px;
+  margin: 20px;
 }
 
 // .search-form-control .btn {
